[package]
name = "skynet_deno"
version = "0.1.0"
authors = ["lsg2020 <2468180623@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sndeno"
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
futures = "0.3.5"
lazy_static = "1.4.0"
libc = "0.2.71"
log = "0.4.8"
tokio = { version = "1.4.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
tokio-rustls = "0.22.0"
async-task = "1.3.0"
async-std = "0.99.5"
backtrace = "0.3"
url = { version = "2.2.1", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
byteorder = "1.4.2"
smallvec = "1.4.0"
openssl-sys = "0.9.59"
ureq = "2.0.0"
tungstenite = "0.11.1"

rusty_v8 = {version = "0.22.2", path = "./rusty_v8"}
deno_core = {path = "./deno/core", version = "0.88.0"}
deno_runtime = {path = "./deno/runtime", version = "0.15.0"}
